Update running-metabase-on-debian.md