@@ -1,172 +1,64 @@
 ---
-title: Running Metabase on Debian as a service with nginx
+Titel: Metabase auf Debian als Dienst mit nginx betreiben
 redirect_from:
-  - /docs/latest/operations-guide/running-metabase-on-debian
+- /docs/latest/operations-guide/running-metabase-on-debian
 ---
 
-# Running Metabase on Debian as a service with nginx
 
-For those people who don't (or can't) use Docker in their infrastructure, there's still a need to easily setup and deploy Metabase in production. On Debian-based systems, this means registering Metabase as a service that can be started/stopped/uninstalled.
+# Ausführen von Metabase auf Debian als Dienst mit nginx
 
-**Note:** This is just a _bare-bones recipe_ to get you started. Anyone can take it from here to do what they need to do on their systems, and should follow best practices for setting up and securing the rest of their server.
 
-## Assumptions
+Für diejenigen, die Docker nicht in ihrer Infrastruktur verwenden (können), besteht immer noch die Notwendigkeit, Metabase einfach einzurichten und in der Produktion einzusetzen. Auf Debian-basierten Systemen bedeutet dies, dass Metabase als Dienst registriert wird, der gestartet/gestoppt/deinstalliert werden kann.
 
-The core assumption in this guide:
 
-- You will run Metabase using the `metabase.jar` file
-- You already have `nginx` and `postgres` (or another supported database) running on your server
-- You will use environment variables to configure your Metabase instance
-- You have `sudo` access on your server
+**Hinweis:** Dies ist nur ein _Grundrezept_ für den Anfang. Jeder kann von hier aus das tun, was er auf seinem System tun muss, und sollte die besten Praktiken für das Einrichten und Sichern des restlichen Servers befolgen.
 
-## Create an unprivileged user to run Metabase and give the user access to app and logs
 
-For security reasons we want to have Metabase run as an unprivileged user. We will call the user simply `metabase`. Further we will create the files we will need later for logging and configuration of Metabase, and apply the correct security settings for our unprivileged user.
+## Annahmen
+
+
+Die Hauptannahme in diesem Handbuch:
+
+
+- Sie werden Metabase unter Verwendung der Datei "metabase.jar" ausführen.
+- Sie haben bereits "nginx" und "postgres" (oder eine andere unterstützte Datenbank) auf Ihrem Server installiert.
+- Sie werden Umgebungsvariablen verwenden, um Ihre Metabase-Instanz zu konfigurieren
+- Sie haben ` sudo`-Zugriff auf Ihrem Server
+
+
+## Erstellen Sie einen unprivilegierten Benutzer für die Ausführung von Metabase und geben Sie ihm Zugriff auf die Anwendung und die Protokolle.
+
+
+Aus Sicherheitsgründen wollen wir Metabase als unprivilegierten Benutzer laufen lassen. Wir werden den Benutzer einfach ` metabase` nennen. Außerdem erstellen wir die Dateien, die wir später für die Protokollierung und Konfiguration der Metabase benötigen, und wenden die richtigen Sicherheitseinstellungen für unseren unprivilegierten Benutzer an.
+
 
 ```
 sudo groupadd -r metabase
 sudo useradd -r -s /bin/false -g metabase metabase
-sudo chown -R metabase:metabase </your/path/to/metabase/directory>
+sudo chown -R metabase:metabase </ihr/Pfad/zu/metabase/Verzeichnis>
 sudo touch /var/log/metabase.log
 sudo chown syslog:adm /var/log/metabase.log
 sudo touch /etc/default/metabase
 sudo chmod 640 /etc/default/metabase
 ```
 
-## Create a Metabase Service
 
-Every service needs a script that tells `systemd` how to manage it, and what capabilities it supports. Services are typically registered at `/etc/systemd/system/<servicename>`. So, a Metabase service should live at `/etc/systemd/system/metabase.service`.
+## Erstellen eines Metabase-Dienstes
 
-### The Metabase service file
 
-Create the `/etc/systemd/system/metabase.service` service file and open it in your editor:
+Jeder Dienst braucht ein Skript, das`systemd` mitteilt, wie er verwaltet werden soll und welche Fähigkeiten er unterstützt. Dienste werden normalerweise unter `/etc/systemd/system/<Servicename>` registriert. Ein Metabase-Dienst sollte also unter `/etc/systemd/system/metabase.service` zu finden sein.
+
+
+### Die Metabase-Dienstdatei
+
+
+Erstellen Sie die `/etc/systemd/system/metabase.service` Dienstdatei und öffnen Sie sie in Ihrem Editor:
+
 
 ```
 sudo touch /etc/systemd/system/metabase.service
-sudo <your-editor> /etc/systemd/system/metabase.service
+sudo <Dein-Editor> /etc/systemd/system/metabase.service
 ```
 
-In `/etc/systemd/system/metabase.service`, replace configurable items (they look like `<some-var-name>`) with values sensible for your system. The Metabase script below has extra comments to help you know what everything is for.
 
-```
-[Unit]
-Description=Metabase server
-After=syslog.target
-After=network.target
-
-[Service]
-WorkingDirectory=</your/path/to/metabase/directory/>
-ExecStart=/usr/bin/java --add-opens java.base/java.nio=ALL-UNNAMED -jar </your/path/to/metabase/directory/>metabase.jar
-EnvironmentFile=/etc/default/metabase
-User=metabase
-Type=simple
-StandardOutput=syslog
-StandardError=syslog
-SyslogIdentifier=metabase
-SuccessExitStatus=143
-TimeoutStopSec=120
-Restart=always
-
-[Install]
-WantedBy=multi-user.target
-```
-
-## Create syslog conf
-
-Next we need to create a syslog conf to make sure systemd can handle the logs properly.
-
-```
-sudo touch /etc/rsyslog.d/metabase.conf
-sudo <your-editor> /etc/rsyslog.d/metabase.conf
-
-if $programname == 'metabase' then /var/log/metabase.log
-& stop
-```
-
-Restart the syslog service to load the new config.
-
-```
-sudo systemctl restart rsyslog.service
-```
-
-## Environment variables for Metabase
-
-[Environment variables](../configuring-metabase/environment-variables.md) provide a good way to customize and configure your Metabase instance on your server. On Debian systems, services typically expect to have accompanying configs inside `etc/default/<service-name>`.
-
-### The Metabase config file
-
-Open your `/etc/default/metabase` environment config file in your editor:
-
-```
-sudo <your-editor> /etc/default/metabase
-```
-
-In `/etc/default/metabase`, replace configurable items (they look like `<some-var-name>`) with values sensible for your system. Some Metabase configs have available options, some of which are shown below, separated by `|` symbols:
-
-```
-MB_PASSWORD_COMPLEXITY=<weak|normal|strong>
-MB_PASSWORD_LENGTH=<10>
-MB_JETTY_HOST=<0.0.0.0>
-MB_JETTY_PORT=<12345>
-MB_DB_TYPE=<postgres|mysql|h2>
-MB_DB_DBNAME=<your_metabase_db_name>
-MB_DB_PORT=<5432>
-MB_DB_USER=<your_metabase_db_user>
-MB_DB_PASS=<ssshhhh>
-MB_DB_HOST=<localhost>
-MB_EMOJI_IN_LOGS=<true|false>
-# any other env vars you want available to Metabase
-```
-
-## Final steps
-
-The best part of setting up Metabase as a service on a Debian-based system is to be confident it will start up at every system boot. We only have a few more quick steps to finish registering our service and having Metabase up and running.
-
-### Ensure your database is ready
-
-If you're running `postgres` or some other database, you need to ensure you've already followed the instructions for your database system to create a database for Metabase, as well as a user that can access that database. These values should match what you've set in your Metabase config for the `MB_DB_TYPE`, `MB_DB_DBNAME`, `MB_DB_USER`, and `MB_DB_PASS` environment variables. If you don't have your database properly configured, Metabase won't be able to start.
-
-### Ensure `nginx` is setup to proxy requests to Metabase
-
-Getting into too much detail about configuring `nginx` is well outside the scope of this guide, but here's a quick `nginx.conf` file that will get you up and running.
-
-**Note:** The `nginx.conf` below assumes you are accepting incoming traffic on port 80 and want to proxy requests to Metabase, and that your Metabase instance is configured to run on `localhost` at port `3000`. There are several proxy directives you may care about, so you should check those out further in the [Official `nginx` docs](https://nginx.org/en/docs/).
-
-```
-# sample nginx.conf
-# proxy requests to Metabase instance
-server {
-  listen 80;
-  listen [::]:80;
-  server_name your.domain.com;
-  location / {
-    proxy_pass http://127.0.0.1:3000;
-  }
-}
-```
-
-### Register your Metabase service
-
-Now, it's time to register our Metabase service with `systemd` so it will start up at system boot. We'll also ensure our log file is created and owned by the unprivileged user our service runs the `metabase.jar` as.
-
-```
-sudo systemctl daemon-reload
-sudo systemctl start metabase.service
-sudo systemctl status metabase.service
-```
-
-Once we are ok here, enable the service to startup during boot.
-
-```
-sudo systemctl enable metabase.service
-```
-
-## Start, stop, or restart Metabase
-
-Now, whenever you need to start, stop, or restart Metabase, all you need to do is:
-
-```
-sudo systemctl start metabase.service
-sudo systemctl stop metabase.service
-sudo systemctl restart metabase.service
-```
+Ersetzen Sie in `/etc/systemd/system/metabase.service` die konfigurierbaren Elemente (sie sehen aus wie `<some-var-name>`) durch für Ihr System sinnvolle Werte. Das Metabase-Skript unten hat zusätzliche Kommentare, damit Sie wissen, wofür alles da ist.
